# contacts

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: labeler.yml
.github/workflows/: ci.yml  label.yml
contacts/: __init__.py  address.py  address_book.py  applescript.py  applescript_address_book.py  category.py  cli.py  config.py  contact.py  field.py  icon.py  info.py  keyword.py  problem.py  query.py
contacts/applescript/: add.applescript  brief.applescript  delete.applescript  detail.applescript  find.applescript  update.applescript
contacts/checks/: __init__.py  address_check.py  capitalization_check.py  casing_check.py  custom_date_check.py  dupe_check.py  duplicate_check.py  email_check.py  home_page_check.py  label_check.py  name_capitalization_check.py  nickname_check.py  phone_check.py  url_check.py
tests/: __init__.py  conftest.py  contact_diff.py  mock_address_book.py  mocks.py  test_checks.py  test_cli.py  test_contact_diff.py  test_keyword.py  test_query.py
tests/data/: amelia.detail  amelia.json  amelia.yaml  amelie.detail  amelie.json  bob.detail  bob.json  bob.yaml  carnival.detail  carnival.json  carnival.yaml  errona.detail  errona.json  warnen.detail  warnen.fixed.json  warnen.fixes.json  warnen.json
