[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contacts"
version = "0.0.1"
description = 'Manage contacts'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["contacts"]
authors = [{ name = "Tugrul Ates", email = "me@tugrulates.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "email_validator==2.2.0",
  "phonenumberslite==8.13.52",
  "pydantic==2.10.5",
  "rich==13.9.4",
  "typer[all]==0.15.1",
  "Unidecode==1.3.8",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]==1.8.2",
  "black==24.10.0",
  "flake8-bugbear==24.12.12",
  "flake8-builtins==2.5.0",
  "flake8-comprehensions==3.16.0",
  "flake8-docstrings==1.7.0",
  "flake8-encodings[classes]==0.5.1",
  "flake8-return==1.2.0",
  "flake8-simplify==0.21.0",
  "flake8==7.1.1",
  "isort==5.13.2",
  "mypy==1.14.1",
  "pep8-naming==0.14.1",
  "pytest==8.3.4",
]
test = [
  "pytest-cov==6.0.0",
  "pytest==8.3.4",
]

[project.scripts]
contacts = "contacts.cli:app"

[project.urls]
Documentation = "https://github.com/tugrulates/contacts#readme"
Issues = "https://github.com/tugrulates/contacts/issues"
Source = "https://github.com/tugrulates/contacts"

[tool.hatch.build]
artifacts = [
  "contacts/applescript/*.applescript",
]

[tool.hatch.envs.dev]
features = ["dev"]

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.default.scripts]
lint = [
  "flake8 .",
  "mypy . --check-untyped-defs",
  "bandit -qr -c pyproject.toml .",
  "black . --check --diff",
  "isort . --check-only --diff",
]
fmt = [
  "isort .",
  "black .",
]
test = [
  "pytest -vv",
]
cov = [
  "pytest --cov contacts --cov-report xml --cov-fail-under=80",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
