[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contacts"
version = "0.0.1"
description = 'Manage contacts'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["contacts"]
authors = [{ name = "Tugrul Ates", email = "me@tugrulates.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "email_validator==2.2.0",
  "phonenumberslite==9.0.8",
  "pydantic==2.11.7",
  "rich==14.0.0",
  "typer[all]==0.16.0",
  "Unidecode==1.4.0",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]==1.8.5",
  "black==25.1.0",
  "flake8-bugbear==24.12.12",
  "flake8-builtins==2.5.0",
  "flake8-comprehensions==3.16.0",
  "flake8-docstrings==1.7.0",
  "flake8-encodings[classes]==0.5.1",
  "flake8-return==1.2.0",
  "flake8-simplify==0.22.0",
  "flake8==7.3.0",
  "isort==6.0.1",
  "mypy==1.16.1",
  "pep8-naming==0.15.1",
  "pytest==8.4.1",
]
test = [
  "pytest-cov==6.2.1",
  "pytest==8.4.1",
]

[project.scripts]
contacts = "contacts.cli:app"

[project.urls]
Documentation = "https://github.com/tugrulates/contacts#readme"
Issues = "https://github.com/tugrulates/contacts/issues"
Source = "https://github.com/tugrulates/contacts"

[tool.hatch.build]
artifacts = [
  "contacts/applescript/*.applescript",
]

[tool.hatch.envs.dev]
features = ["dev"]

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.default.scripts]
lint = [
  "flake8 .",
  "mypy . --check-untyped-defs",
  "bandit -qr -c pyproject.toml .",
  "black . --check --diff",
  "isort . --check-only --diff",
]
fmt = [
  "isort .",
  "black .",
]
test = [
  "pytest -vv",
]
cov = [
  "pytest --cov contacts --cov-report xml --cov-fail-under=80",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
